make sure, mlh panel is visible all the way down

--- a/assets/scss/components/_layout.scss
+++ b/assets/scss/components/_layout.scss
@@ -66,9 +66,9 @@ body {
 					// height: unset works in safari
 					// height: 100% works in ff
 					// max-height: 100% works in s && ff, bot not in chrome
+					transition: width 200ms ease;
 					height: 100%;
 					overflow-y: auto;
-					transition: width 200ms ease;
 				}
 			}
 		}
@@ -87,6 +87,10 @@ body {
 			padding-bottom: 8rem;
 			z-index: 10;
 			height: 100%;
+
+			max-height: 80vh;
+			overflow-y: auto;
+
 			/*
 			position: relative;
 			top: 0;
